<resources>
    <string name="app_name">new horseapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_body_condition_score">Body Condition Score</string>
    <string name="menu_behavior">Behavior</string>
    <string name="menu_feeding_schedule">Feeding Schedule</string>
    <string name="menu_exercise">Exercise</string>
    <string name="menu_health">Health</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Settings</string>
</resources>