<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_body_condition_score"
            android:title="@string/menu_body_condition_score" />
        <item
            android:id="@+id/nav_behavior"
            android:title="@string/menu_behavior" />
        <item
            android:id="@+id/nav_feeding_schedule"
            android:title="@string/menu_feeding_schedule" />
        <item
            android:id="@+id/nav_exercise"
            android:title="@string/menu_exercise" />
        <item
            android:id="@+id/nav_health"
            android:title="@string/menu_health" />
        <item
            android:id="@+id/nav_reminders"
            android:title="@string/menu_reminders" />
        <item
            android:id="@+id/nav_info"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>