<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newhorseapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_body_condition_score"
        android:name="com.example.newhorseapp.ui.bodycondition.BodyConditionFragment"
        android:label="@string/menu_body_condition_score"
        tools:layout="@layout/fragment_body_condition_score" />

    <fragment
        android:id="@+id/nav_behavior"
        android:name="com.example.newhorseapp.ui.behavior.BehaviorFragment"
        android:label="@string/menu_behavior"
        tools:layout="@layout/fragment_behavior" />

    <fragment
        android:id="@+id/nav_feeding_schedule"
        android:name="com.example.newhorseapp.ui.home.HomeFragment"
        android:label="@string/menu_feeding_schedule"
        tools:layout="@layout/fragment_feeding_schedule" />

    <fragment
        android:id="@+id/nav_exercise"
        android:name="com.example.newhorseapp.ui.exercise.ExerciseFragment"
        android:label="@string/menu_exercise"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/nav_health"
        android:name="com.example.newhorseapp.ui.reminders.RemindersFragment"
        android:label="@string/menu_health"
        tools:layout="@layout/fragment_health" />

    <fragment
        android:id="@+id/nav_reminders"
        android:name="com.example.newhorseapp.ui.home.HomeFragment"
        android:label="@string/menu_reminders"
        tools:layout="@layout/fragment_reminders" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.newhorseapp.ui.settings.SettingsFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.newhorseapp.ui.reminders.RemindersFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>